--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-json-parse",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "Parse JSON safely without throwing",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
@@ -16,8 +16,7 @@
     "url": "https://github.com/Raynos/safe-json-parse/issues",
     "email": "raynos2@gmail.com"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "tape": "~1.0.2"
   },
